fix: increase z-index of header

--- a/src/scss/components/Header.module.scss
+++ b/src/scss/components/Header.module.scss
@@ -12,7 +12,7 @@
   gap: 2rem;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 1000;
 
   @media (max-width: $breakpoint) {
     padding: 2rem;
